--- a/project/admin/add_catergory.html
+++ b/project/admin/add_catergory.html
@@ -290,7 +290,7 @@
                                            
                                             <div class="form-group">
                                                 <input type="text" class="form-control form-control-user" id="cat" name="categories"
-                                                    placeholder="Email Address">
+                                                    placeholder="add catergory">
                                             </div>
 
                                          
